src/test/resources/com/pestphp/pest/inspections/DuplicateTestName.php
<?php

<error descr="Pest test names must be unique in the same file.">test('basic', function () {
    $this->assertTrue(true);
})</error>;

<error descr="Pest test names must be unique in the same file.">test('basic', function () {
    $this->assertTrue(true);
})</error>;